--- a/JDBD_PY_exa1.ipynb
+++ b/JDBD_PY_exa1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPobMRQJ+jOBJo/4EPwqv3s",
+      "authorship_tag": "ABX9TyPaaQZwbOzM76MPe6Smd5Pw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,25 +27,29 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {
-        "id": "A6P-hFdYOlL2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f008d815-7c4a-43dc-85fb-d1941f64b981"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Introduzca un Numero entre 0 y 10: 7\n",
-            "El numero 7 esta validado y dentro del rango\n"
-          ]
-        }
+      "cell_type": "markdown",
+      "source": [
+        "Pregunta 1\n",
+        "\n",
+        "Escribe una funcion de Python en collaboratory que realice lo siguiente:\n",
+        "\n",
+        "funcion que retorne un numero dentro de un rango dado, validar el numero que cumpla el requisito del rango, la funcion debera validar que el programa no marque error por introducir informacion erronea (usar try except)\n",
+        "\n",
+        "Escribir codigo que mande llamar la funcion y desplegar el resultado,\n",
+        "\n",
+        "Escribir enlace a GITHUB a un dcto que se llame INICIALES_PY_exa1"
       ],
+      "metadata": {
+        "id": "aqFZ7HITSqmy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "A6P-hFdYOlL2"
+      },
+      "outputs": [],
       "source": [
         "def ValidaNum(ri, rf, mensaje, mensajeError):\n",
         "  while(True):\n",
