--- a/JDBD_PY_exa1.ipynb
+++ b/JDBD_PY_exa1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaaQZwbOzM76MPe6Smd5Pw",
+      "authorship_tag": "ABX9TyNkcybytKNAB1RFyFy19zXZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,6 +65,87 @@
         "num = ValidaNum(0, 10, \"Introduzca un Numero entre\", \"Error\")\n",
         "print(f\"El numero {num} esta validado y dentro del rango\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pregunta 2\n",
+        "\n",
+        "Escribe una funcion de Python en collaboratory que realice lo siguiente:\n",
+        "\n",
+        "funcion que retorne una lista con 30 numeros generados aleatorios (20-100) no repetidos\n",
+        "\n",
+        "Escribir codigo que mande llamar la funcion y desplegar el resultado"
+      ],
+      "metadata": {
+        "id": "lYXRwITyTldo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from random import randrange\n",
+        "\n",
+        "def NumAleatorio():\n",
+        "  i = 0\n",
+        "  while (i < 30):\n",
+        "    lista.append(randrange(20, 100))\n",
+        "    \n",
+        "    i = i + 1\n",
+        "  return lista\n",
+        "\n",
+        "lista = []\n",
+        "lista = NumAleatorio()\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CDL5plq4T5qF",
+        "outputId": "2ea42c09-5689-445f-b976-e13584984abe"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[30, 41, 28, 68, 91, 21, 37, 86, 31, 43, 27, 80, 28, 26, 88, 63, 88, 85, 80, 69, 30, 84, 77, 26, 78, 72, 76, 45, 28, 46]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pregunta 3\n",
+        "\n",
+        "Escribe una funcion de Python en collaboratory que realice lo siguiente:\n",
+        "\n",
+        "funcion que retorne el resultado del area de un triangulo"
+      ],
+      "metadata": {
+        "id": "-S2syxY7Vws6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def AreaTri(base, altura):\n",
+        "  area = (base*altura)/2\n",
+        "  return area\n",
+        "\n",
+        "base = ValidaNum(1, 100, \"Introduzca un Numero entre\", \"Error\")\n",
+        "altura =  ValidaNum(1, 100, \"Introduzca un Numero entre\", \"Error\")\n",
+        "area = AreaTri(base, altura)\n",
+        "print(f\"El area del triangulo es de {area} unidades cuadradas\")"
+      ],
+      "metadata": {
+        "id": "fmhsUCfeV1ko"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
