--- a/JDBD_PY_exa1.ipynb
+++ b/JDBD_PY_exa1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkcybytKNAB1RFyFy19zXZ",
+      "authorship_tag": "ABX9TyPe13O9AAOjlVg43USfoonw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,16 +86,17 @@
       "source": [
         "from random import randrange\n",
         "\n",
-        "def NumAleatorio():\n",
+        "def LlenarLista():\n",
         "  i = 0\n",
         "  while (i < 30):\n",
-        "    lista.append(randrange(20, 100))\n",
-        "    \n",
-        "    i = i + 1\n",
+        "    num = randrange(20, 100)\n",
+        "    if num not in lista:\n",
+        "      lista.append(num)\n",
+        "      i = i + 1\n",
         "  return lista\n",
         "\n",
         "lista = []\n",
-        "lista = NumAleatorio()\n",
+        "lista = LlenarLista()\n",
         "print(lista)"
       ],
       "metadata": {
@@ -103,15 +104,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CDL5plq4T5qF",
-        "outputId": "2ea42c09-5689-445f-b976-e13584984abe"
+        "outputId": "71530e09-f2b1-47b3-9186-dbbce0d84bb4"
       },
-      "execution_count": 15,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[30, 41, 28, 68, 91, 21, 37, 86, 31, 43, 27, 80, 28, 26, 88, 63, 88, 85, 80, 69, 30, 84, 77, 26, 78, 72, 76, 45, 28, 46]\n"
+            "[60, 34, 72, 22, 67, 57, 80, 26, 91, 82, 76, 75, 92, 71, 53, 24, 49, 58, 93, 28, 81, 86, 25, 46, 77, 47, 99, 89, 85, 69]\n"
           ]
         }
       ]
